[openvpn] Replaced dashes with underscorsed in property names

--- a/netjsonconfig/backends/openvpn/templates/openvpn.jinja2
+++ b/netjsonconfig/backends/openvpn/templates/openvpn.jinja2
@@ -2,6 +2,7 @@
 # config: {{ vpn.pop('name') }};
 
     {% for key, value in vpn.items() %}
+        {% set key = key.replace('_', '-') %}
         {% if value is sameas True %}
             {{ key }}
         {% elif value is string or value is number %}
