--- a/netjsonconfig/backends/airos/templates/system.jinja2
+++ b/netjsonconfig/backends/airos/templates/system.jinja2
@@ -5,4 +5,11 @@ resolv.nameserver.status=enabled
 resolv.nameserver.{{ i + 1 }}.status=enabled
 resolv.nameserver.{{ i + 1}}.ip={{ entry }}
 {% endfor %}
+
+system.timezone={{ system.timezone }}
+system.longitude={{ system.longitude }}
+system.latitude={{ system.latitude }}
+system.date.timestamp={{ system.timestamp }}
+system.button.reset={{ system.reset }}
+
 {% endif %}
