--- a/netjsonconfig/backends/openvpn/templates/openvpn.jinja2
+++ b/netjsonconfig/backends/openvpn/templates/openvpn.jinja2
@@ -1,16 +1,18 @@
 {% for vpn in data.openvpn %}
-# openvpn config: {{ vpn.pop('name') }}
+# openvpn config: {{ vpn.name }}
 
     {% for key, value in vpn.items() %}
         {% set key = key.replace('_', '-') %}
-        {% if value is sameas True %}
-            {{ key }}
-        {% elif value is string or value is number %}
-            {{ key }} {{ value }}
-        {% elif value is iterable %}
-            {% for element in value %}
-                {{ key }} {{ element }}
-            {% endfor %}
+        {% if key != 'name' %}
+            {% if value is sameas True %}
+                {{ key }}
+            {% elif value is string or value is number %}
+                {{ key }} {{ value }}
+            {% elif value is iterable %}
+                {% for element in value %}
+                    {{ key }} {{ element }}
+                {% endfor %}
+            {% endif %}
         {% endif %}
     {% endfor %}
 
