--- a/netjsonconfig/backends/airos/templates/airos.jinja2
+++ b/netjsonconfig/backends/airos/templates/airos.jinja2
@@ -1,5 +1,7 @@
-{% for namespace, value in data.items() %}
-	{% for config in value %}
-		{{ namespace }}.{{ config['key'] }}={{ config['value'] }}
+{% for namespace, block in data.items() %}
+	{% for element in block %}
+		{% for k,v in element.items() %}
+			{{ namespace }}.{{ k }} = {{ v }}
+		{% endfor %}
 	{% endfor %}
 {% endfor %}
