hardcode netmode value in template

--- a/netjsonconfig/backends/airos/templates/airos.jinja2
+++ b/netjsonconfig/backends/airos/templates/airos.jinja2
@@ -1,7 +1,11 @@
 {% for namespace, block in data.items() %}
-	{% for element in block %}
-		{% for k,v in element.items() %}
-			{{ namespace }}.{{ k }}={{ v }}
+	{% if namespace != 'netmode' %}
+		{% for element in block %}
+			{% for k,v in element.items() %}
+				{{ namespace }}.{{ k }}={{ v }}
+			{% endfor %}
 		{% endfor %}
-	{% endfor %}
+	{% else %}
+		netmode=bridge
+	{% endif %}
 {% endfor %}
