--- a/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
@@ -3,7 +3,7 @@
 {% for interface in j %}
 {% if interface.get('iftype') == 'wireless' %}
 {% if interface.get('mode') == 'adhoc' %}
-config: /etc/network/interfaces
+# config: /etc/network/interfaces
 auto {{ interface.get('iftype') }}
 iface {{ interface.get('iftype') }} inet static
     address 172.128.1.1
@@ -13,7 +13,7 @@ iface {{ interface.get('iftype') }} inet static
     wireless-mode ad-hoc
 {% endif %}
 {% elif interface.get('iftype') in ['ethernet', 'bridge', 'loopback'] %}
-config: /etc/network/interfaces
+# config: /etc/network/interfaces
 auto {{ interface.get('ifname') }}
 {% if interface.get('address') != None %}
 {% for address in interface.get('address') %}
