--- a/netjsonconfig/backends/raspbian/templates/ntp.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/ntp.jinja2
@@ -1,6 +1,6 @@
 {% for i, j in data.items() %}
 {% if i|string() == 'ntp' %}
-config: /etc/ntp.conf
+# config: /etc/ntp.conf
 {% for server in j %}
 server {{ server }}
 {% endfor %}
