--- a/netjsonconfig/backends/raspbian/templates/resolv.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/resolv.jinja2
@@ -2,7 +2,7 @@
 {% for i, j in data.items() %}
 {% if i|string() in ['dns_servers', 'dns_search'] %}
 {% if count == [1] %}
-config: /etc/resolv.conf
+# config: /etc/resolv.conf
 {% if count.append(count.pop() + 1) %}{% endif %}
 {% endif %}
 {% endif %}
