[airos][template] fixed netmode template namespace
the only section differing in the airos file is the netmode value
and it requires a different template formatter, moreover as it is
a single value we can hardcode the key that we require to render

--- a/netjsonconfig/backends/airos/templates/airos.jinja2
+++ b/netjsonconfig/backends/airos/templates/airos.jinja2
@@ -6,6 +6,8 @@
 			{% endfor %}
 		{% endfor %}
 	{% else %}
-		netmode=bridge
+                {% for element in block %}
+                        netmode={{ element['status'] }}
+                {% endfor %}
 	{% endif %}
 {% endfor %}
