--- a/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
@@ -1,23 +1,11 @@
 {% for i, j in data.items() %}
     {% if i|string() == 'interfaces' %}
         {% for interface in j %}
-            {% if interface.get('iftype') == 'wireless' %}
-                {% if interface.get('mode') == 'adhoc' %}
-                    # config: /etc/network/interfaces
-
-                    auto {{ interface.get('iftype') }}
-                    iface {{ interface.get('iftype') }} inet static
-                    address 172.128.1.1
-                        netmask 255.255.255.0
-                        wireless-channel 1
-                        wireless-essid {{ interface.get('essid') }}
-                        wireless-mode ad-hoc
-                {% endif %}
-            {% elif interface.get('iftype') in ['ethernet', 'bridge', 'loopback'] %}
-                # config: /etc/network/interfaces
-                
-                auto {{ interface.get('ifname') }}
+            {% if interface.get('iftype') in ['ethernet', 'bridge', 'loopback', 'wireless'] %}
                 {% if interface.get('address') != None %}
+                # config: /etc/network/interfaces
+
+                auto {{ interface.get('ifname') }}
                     {% for address in interface.get('address') %}
                         {% if address.get('proto') == 'static' %}
                             {% if address.get('family') == 'ipv4' %}
@@ -75,7 +63,21 @@
                     {% endfor %}
                 {% else %}
                     {% if interface.get('iftype') == 'bridge' %}
+                    # config: /etc/network/interfaces
+
+                    auto {{ interface.get('ifname') }}
                     bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
+                    {% endif %}
+                    {% if interface.get('mode') == 'adhoc' %}
+                        # config: /etc/network/interfaces
+
+                        auto {{ interface.get('iftype') }}
+                        iface {{ interface.get('iftype') }} inet static
+                        address 172.128.1.1
+                            netmask 255.255.255.0
+                            wireless-channel 1
+                            wireless-essid {{ interface.get('essid') }}
+                            wireless-mode ad-hoc
                     {% endif %}
                 {% endif %}
             {% endif %}
