--- a/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
@@ -2,8 +2,8 @@
     {% if i|string() == 'interfaces' %}
         {% for interface in j %}
             {% if interface.get('iftype') in ['ethernet', 'bridge', 'loopback', 'wireless'] %}
-                {% if interface.get('address') != None %}
                 # config: /etc/network/interfaces
+                {% if interface.get('address') != None %}
 
                 auto {{ interface.get('ifname') }}
                     {% for address in interface.get('address') %}
@@ -67,17 +67,16 @@
                         {% endif%}
                     {% endfor %}
                 {% else %}
-                    {% if interface.get('iftype') == 'bridge' %}
-                    # config: /etc/network/interfaces
 
                     auto {{ interface.get('ifname') }}
+                    {% if interface.get('iftype') == 'wireless' and interface.get('mode') != 'adhoc' %}
+                    iface {{ interface.get('ifname') }} inet manual
+                    {% endif %}
+                    {% if interface.get('iftype') == 'bridge' %}
                     bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
                     {% endif %}
                     {% if interface.get('mode') == 'adhoc' %}
-                        # config: /etc/network/interfaces
-
-                        auto {{ interface.get('iftype') }}
-                        iface {{ interface.get('iftype') }} inet static
+                        iface {{ interface.get('ifname') }} inet static
                         address 172.128.1.1
                             netmask 255.255.255.0
                             wireless-channel 1
