[raspbian] Added support for ipv6 static routes

--- a/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
@@ -36,6 +36,11 @@
                                     {% if address.get('gateway', None) != None %}
                                     gateway {{ address.get('gateway') }}
                                     {% endif %}
+                                    {% if interface.get('route') != None %}
+                                    {% set route = interface.get('route')%}
+                                    up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                                    down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                                    {% endif %}
                                     {% if interface.get('mtu', None) != None %}
                                     mtu {{ interface.get('mtu') }}
                                     {% endif %}
@@ -62,6 +67,11 @@
                                     {% endif %}
                             {% elif address.get('family') == 'ipv6' %}
                                 iface {{ interface.get('ifname') }} inet6 {{ address.get('proto') }}
+                                    {% if interface.get('route') != None %}
+                                    {% set route = interface.get('route') %}
+                                    up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                                    down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                                    {% endif %}
                                     {% if interface.get('mtu', None) != None %}
                                     pre-up /sbin/ifconfig $IFACE mtu {{ interface.get('mtu') }}
                                     {% endif %}
@@ -76,10 +86,13 @@
                     auto {{ interface.get('ifname') }}
                     {% if interface.get('iftype') in ['ethernet', 'wireless'] and interface.get('mode') != 'adhoc' %}
                     iface {{ interface.get('ifname') }} inet manual
-                    {% if interface.get('route') != None %}
                     {% set route = interface.get('route')%}
+                    {% if interface.get('route') != None and route.get('version') == 4 %}
                     post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
                     pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
+                    {% elif interface.get('route') != None and route.get('version') == 6 %}
+                    up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                    down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
                     {% endif %}
                     {% endif %}
                     {% if interface.get('iftype') == 'bridge' %}
