[raspbian] Simplifed jinja2 templates

--- a/netjsonconfig/backends/raspbian/templates/hostname.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/hostname.jinja2
@@ -1,12 +1,8 @@
-{% for i, j in data.items() %}
-    {% if i|string() == 'general' %}
-        {% for general in j %}
-            {% if general.get('hostname') %}
-                # config: /etc/hostname
-                
-                {{ general.get('hostname') }}
+{% for general in data.general %}
+    {% if general.get('hostname') %}
+        # config: /etc/hostname
 
-            {% endif %}
-        {% endfor %}
+        {{ general.get('hostname') }}
+
     {% endif %}
 {% endfor %}
