--- a/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
@@ -1,114 +1,110 @@
-{% for i, j in data.items() %}
-    {% if i|string() == 'interfaces' %}
-        {% for interface in j %}
-            {% if interface.get('iftype') in ['ethernet', 'bridge', 'loopback', 'wireless'] %}
-                # config: /etc/network/interfaces
-                {% if interface.get('address') != None %}
+{% for interface in data.interfaces %}
+    {% if interface.get('iftype') in ['ethernet', 'bridge', 'loopback', 'wireless'] %}
+        # config: /etc/network/interfaces
+        {% if interface.get('address') != None %}
 
-                auto {{ interface.get('ifname') }}
-                    {% for address in interface.get('address') %}
-                        {% if address.get('proto') == 'static' %}
-                            {% if address.get('family') == 'ipv4' %}
-                                iface {{ interface.get('ifname') }} inet {{ address.get('proto') }}
-                                    address {{ address.get('address') }}
-                                    netmask {{ address.get('netmask') }}
-                                    {% if address.get('gateway', None) != None %}
-                                    gateway {{ address.get('gateway')}}
-                                    {% endif %}
-                                    {% if interface.get('route') != None %}
-                                    {% set route = interface.get('route')%}
-                                    post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
-                                    pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
-                                    {% endif %}
-                                    {% if interface.get('mtu', None) != None %}
-                                    mtu {{ interface.get('mtu') }}
-                                    {% endif %}
-                                    {% if interface.get('mac', None) != None %}
-                                    hwaddress {{ interface.get('mac') }}
-                                    {% endif %}
-                                    {% if interface.get('iftype') == 'bridge' %}
-                                    bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
-                                    {% endif %}
-                            {% elif address.get('family') == 'ipv6' %}
-                                iface {{ interface.get('ifname') }} inet6 {{ address.get('proto') }}
-                                    address {{ address.get('address') }}
-                                    netmask {{ address.get('netmask') }}
-                                    {% if address.get('gateway', None) != None %}
-                                    gateway {{ address.get('gateway') }}
-                                    {% endif %}
-                                    {% if interface.get('route') != None %}
-                                    {% set route = interface.get('route')%}
-                                    up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
-                                    down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
-                                    {% endif %}
-                                    {% if interface.get('mtu', None) != None %}
-                                    mtu {{ interface.get('mtu') }}
-                                    {% endif %}
-                                    {% if interface.get('mac', None) != None %}
-                                    hwaddress {{ interface.get('mac') }}
-                                    {% endif %}
-                                    {% if interface.get('iftype') == 'bridge' %}
-                                    bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
-                                    {% endif %}
+        auto {{ interface.get('ifname') }}
+            {% for address in interface.get('address') %}
+                {% if address.get('proto') == 'static' %}
+                    {% if address.get('family') == 'ipv4' %}
+                        iface {{ interface.get('ifname') }} inet {{ address.get('proto') }}
+                            address {{ address.get('address') }}
+                            netmask {{ address.get('netmask') }}
+                            {% if address.get('gateway', None) != None %}
+                            gateway {{ address.get('gateway')}}
                             {% endif %}
-                        {% elif address.get('proto') == 'dhcp' %}
-                            {% if address.get('family') == 'ipv4'%}
-                                iface {{ interface.get('ifname') }} inet {{ address.get('proto') }}
-                                    {% if interface.get('route') != None %}
-                                    {% set route = interface.get('route')%}
-                                    post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
-                                    pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
-                                    {% endif %}
-                                    {% if interface.get('mtu', None) != None %}
-                                    pre-up /sbin/ifconfig $IFACE mtu {{ interface.get('mtu') }}
-                                    {% endif %}
-                                    {% if interface.get('mac', None) != None %}
-                                    hwaddress {{ interface.get('mac') }}
-                                    {% endif %}
-                            {% elif address.get('family') == 'ipv6' %}
-                                iface {{ interface.get('ifname') }} inet6 {{ address.get('proto') }}
-                                    {% if interface.get('route') != None %}
-                                    {% set route = interface.get('route') %}
-                                    up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
-                                    down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
-                                    {% endif %}
-                                    {% if interface.get('mtu', None) != None %}
-                                    pre-up /sbin/ifconfig $IFACE mtu {{ interface.get('mtu') }}
-                                    {% endif %}
-                                    {% if interface.get('mac', None) != None %}
-                                    hwaddress {{ interface.get('mac') }}
-                                    {% endif %}
+                            {% if interface.get('route') != None %}
+                            {% set route = interface.get('route')%}
+                            post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
+                            pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
                             {% endif %}
-                        {% endif%}
-                    {% endfor %}
-                {% else %}
+                            {% if interface.get('mtu', None) != None %}
+                            mtu {{ interface.get('mtu') }}
+                            {% endif %}
+                            {% if interface.get('mac', None) != None %}
+                            hwaddress {{ interface.get('mac') }}
+                            {% endif %}
+                            {% if interface.get('iftype') == 'bridge' %}
+                            bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
+                            {% endif %}
+                    {% elif address.get('family') == 'ipv6' %}
+                        iface {{ interface.get('ifname') }} inet6 {{ address.get('proto') }}
+                            address {{ address.get('address') }}
+                            netmask {{ address.get('netmask') }}
+                            {% if address.get('gateway', None) != None %}
+                            gateway {{ address.get('gateway') }}
+                            {% endif %}
+                            {% if interface.get('route') != None %}
+                            {% set route = interface.get('route')%}
+                            up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                            down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                            {% endif %}
+                            {% if interface.get('mtu', None) != None %}
+                            mtu {{ interface.get('mtu') }}
+                            {% endif %}
+                            {% if interface.get('mac', None) != None %}
+                            hwaddress {{ interface.get('mac') }}
+                            {% endif %}
+                            {% if interface.get('iftype') == 'bridge' %}
+                            bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
+                            {% endif %}
+                    {% endif %}
+                {% elif address.get('proto') == 'dhcp' %}
+                    {% if address.get('family') == 'ipv4'%}
+                        iface {{ interface.get('ifname') }} inet {{ address.get('proto') }}
+                            {% if interface.get('route') != None %}
+                            {% set route = interface.get('route')%}
+                            post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
+                            pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
+                            {% endif %}
+                            {% if interface.get('mtu', None) != None %}
+                            pre-up /sbin/ifconfig $IFACE mtu {{ interface.get('mtu') }}
+                            {% endif %}
+                            {% if interface.get('mac', None) != None %}
+                            hwaddress {{ interface.get('mac') }}
+                            {% endif %}
+                    {% elif address.get('family') == 'ipv6' %}
+                        iface {{ interface.get('ifname') }} inet6 {{ address.get('proto') }}
+                            {% if interface.get('route') != None %}
+                            {% set route = interface.get('route') %}
+                            up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                            down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+                            {% endif %}
+                            {% if interface.get('mtu', None) != None %}
+                            pre-up /sbin/ifconfig $IFACE mtu {{ interface.get('mtu') }}
+                            {% endif %}
+                            {% if interface.get('mac', None) != None %}
+                            hwaddress {{ interface.get('mac') }}
+                            {% endif %}
+                    {% endif %}
+                {% endif%}
+            {% endfor %}
+        {% else %}
 
-                    auto {{ interface.get('ifname') }}
-                    {% if interface.get('iftype') in ['ethernet', 'wireless'] and interface.get('mode') != 'adhoc' %}
-                    iface {{ interface.get('ifname') }} inet manual
-                    {% set route = interface.get('route')%}
-                    {% if interface.get('route') != None and route.get('version') == 4 %}
-                    post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
-                    pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
-                    {% elif interface.get('route') != None and route.get('version') == 6 %}
-                    up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
-                    down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
-                    {% endif %}
-                    {% endif %}
-                    {% if interface.get('iftype') == 'bridge' %}
-                    bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
-                    {% endif %}
-                    {% if interface.get('mode') == 'adhoc' %}
-                        iface {{ interface.get('ifname') }} inet static
-                        address 172.128.1.1
-                            netmask 255.255.255.0
-                            wireless-channel 1
-                            wireless-essid {{ interface.get('essid') }}
-                            wireless-mode ad-hoc
-                    {% endif %}
-                {% endif %}
+            auto {{ interface.get('ifname') }}
+            {% if interface.get('iftype') in ['ethernet', 'wireless'] and interface.get('mode') != 'adhoc' %}
+            iface {{ interface.get('ifname') }} inet manual
+            {% set route = interface.get('route')%}
+            {% if interface.get('route') != None and route.get('version') == 4 %}
+            post-up route add -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
+            pre-up route del -net {{ route.get('dest') }} netmask {{ route.get('dest_mask') }} gw {{ route.get('next') }}
+            {% elif interface.get('route') != None and route.get('version') == 6 %}
+            up ip -6 route add {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
+            down ip -6 route del {{ route.get('destination') }} via {{ route.get('next')}} dev eth0
             {% endif %}
-
-        {% endfor %}
+            {% endif %}
+            {% if interface.get('iftype') == 'bridge' %}
+            bridge_ports {{ interface.get('bridge_members')[0] }} {{ interface.get('bridge_members')[1] }}
+            {% endif %}
+            {% if interface.get('mode') == 'adhoc' %}
+                iface {{ interface.get('ifname') }} inet static
+                address 172.128.1.1
+                    netmask 255.255.255.0
+                    wireless-channel 1
+                    wireless-essid {{ interface.get('essid') }}
+                    wireless-mode ad-hoc
+            {% endif %}
+        {% endif %}
     {% endif %}
-{% endfor%}
+
+{% endfor %}
