--- a/netjsonconfig/backends/raspbian/templates/ntp.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/ntp.jinja2
@@ -1,9 +1,7 @@
-{% for i, j in data.items() %}
-    {% if i|string() == 'ntp' %}
-        # config: /etc/ntp.conf
-        
-        {% for server in j %}
-            server {{ server }}
-        {% endfor %}
-    {% endif %}
+{% if data.ntp %}
+# config: /etc/ntp.conf
+
+{% endif %}
+{% for ntp  in data.ntp %}
+    server {{ ntp }}
 {% endfor %}
