--- a/netjsonconfig/backends/raspbian/templates/resolv.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/resolv.jinja2
@@ -1,19 +1,10 @@
-{% set count = [1] %}
-    {% for i, j in data.items() %}
-        {% if i|string() in ['dns_servers', 'dns_search'] %}
-            {% if count == [1] %}
-                # config: /etc/resolv.conf
-                
-                {% if count.append(count.pop() + 1) %}{% endif %}
-            {% endif %}
-        {% endif %}
-        {% if i|string() == 'dns_servers' %}
-            {% for ip in j %}
-                nameserver {{ ip }}
-            {% endfor %}
-        {% elif i|string() == 'dns_search' %}
-            {% for domain in j %}
-                search {{ domain }}
-            {% endfor %}
-        {% endif %}
-{% endfor%}
+{% if data.dns_servers or data.dns_search %}
+# config: /etc/resolv.conf
+
+{% endif %}
+{% for ip in data.dns_servers %}
+    nameserver {{ ip }}
+{% endfor %}
+{% for domain in data.dns_search %}
+    search {{ domain }}
+{% endfor %}
