[raspbian] Refactored template

--- a/netjsonconfig/backends/raspbian/templates/commands.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/commands.jinja2
@@ -1,11 +1,7 @@
-{% for i, j  in data.items() %}
-    {% if i|string() == 'general' %}
-        {% for general in j %}
-            {% if general.get('timezone') %}
-                run commands:
-                $ timedatectl set-timezone {{ general.get('timezone') }}
+{% for general in data.general %}
+    {% if general.get('timezone') %}
+        run commands:
+        $ timedatectl set-timezone {{ general.get('timezone') }}
 
-            {% endif %}
-        {% endfor %}
     {% endif %}
 {% endfor%}
