--- a/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
@@ -1,26 +1,26 @@
 {% for wireless in data.wireless %}
     # config: /etc/hostapd/hostapd.conf
 
-    interface={{ wireless.get('ifname') }}
+    interface={{ wireless.ifname }}
     driver=nl80211
-    {% if wireless.get('protocol') == 'a' or 'b' or 'g' %}
-    hw_mode={{ wireless.get('hwmode')}}
+    {% if wireless.protocol == 'a' or 'b' or 'g' %}
+    hw_mode={{ wireless.hwmode }}
     {% endif %}
-    channel={{ wireless.get('channel')}}
-    {% if wireless.get('protocol') == '80211n' %}
+    channel={{ wireless.channel }}
+    {% if wireless.protocol == '80211n' %}
     ieee80211n=1
     {% endif %}
-    {% if wireless.get('protocol') == '80211ac' %}
+    {% if wireless.protocol == '80211ac' %}
     ieee80211ac=1
     {% endif %}
-    ssid={{ wireless.get('ssid') }}
-    {% if wireless.get('encryption') != {} %}
-        auth_algs={{ wireless.get('encryption').get('auth_algs') }}
-        wpa={{ wireless.get('encryption').get('wpa') }}
-        wpa_key_mgmt={{ wireless.get('encryption').get('wpa_key_mgmt') }}
-        wpa_passphrase={{ wireless.get('encryption').get('wpa_passphrase') }}
-        {% if wireless.get('encryption', None).get('wpa_pairwise') != 'AUTO' %}
-        wpa_pairwise={{ wireless.get('encryption').get('wpa_pairwise')}}
+    ssid={{ wireless.ssid }}
+    {% if wireless.encryption %}
+        auth_algs={{ wireless.encryption.auth_algs }}
+        wpa={{ wireless.encryption.wpa }}
+        wpa_key_mgmt={{ wireless.encryption.wpa_key_mgmt }}
+        wpa_passphrase={{ wireless.encryption.wpa_passphrase }}
+        {% if wireless.encryption.wpa_pairwise != 'AUTO' %}
+        wpa_pairwise={{ wireless.encryption.wpa_pairwise }}
         {% endif %}
     {% endif %}
 {% endfor %}
