--- a/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/interfaces.jinja2
@@ -5,7 +5,9 @@
 {% for interface in data.interfaces %}
     {% if interface.iftype in ['ethernet', 'bridge', 'loopback', 'wireless'] %}
         {% if interface.address %}
+        {% if interface.autostart %}
         auto {{ interface.ifname }}
+        {% endif %}
             {% for address in interface.address %}
                 {% if address.proto == 'static' %}
                     {% if address.family == 'ipv4' %}
