--- a/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
@@ -14,6 +14,15 @@
     ieee80211ac=1
     {% endif %}
     ssid={{ wireless.ssid }}
+    {% if wireless.hidden %}
+    ignore_broadcast_ssid=1
+    {% endif %}
+    {% if wireless.rts_threshold > 0 %}
+    rts_threshold={{ wireless.rts_threshold }}
+    {% endif %}
+    {% if wireless.frag_threshold > 0 %}
+    frag_threshold={{ wireless.frag_threshold }}
+    {% endif %}
     {% if wireless.encryption %}
         auth_algs={{ wireless.encryption.auth_algs }}
         wpa={{ wireless.encryption.wpa }}
@@ -23,5 +32,5 @@
         wpa_pairwise={{ wireless.encryption.wpa_pairwise }}
         {% endif %}
     {% endif %}
-    
+
 {% endfor %}
